--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </main>
 
     <footer>
-        <p>Cosmic Weaver v0.3 (Combined JS)</p>
-         <p>Current Date: April 4, 2025</p>
+        <p>Cosmic Weaver v0.1</p>
+         <p>Current Date: April 4, 2025 (of upload to galaxy.click)</p>
     </footer>
 
     <script>
